--- a/src/components/ToolButton/Toolbutton.module.scss
+++ b/src/components/ToolButton/Toolbutton.module.scss
@@ -1,7 +1,7 @@
 // Copyright (c) Microsoft Corporation.
 // Licensed under the MIT License.
 
-.button {
+@mixin buttonShared {
     border-radius: 3px;
     height: 35px;
     width: 35px;
@@ -10,13 +10,22 @@
     justify-content: center;
     align-items: center;
     padding: 0px;
-    background-color: var(--toolButtonColor);
     margin-right: 4px;
-    border-color: var(--buttonBorder);
     color: var(--buttonTextColor);
+}
+
+.button {
+    @include buttonShared;
+    background-color: var(--toolButtonColor);
+    border-color: var(--buttonBorder);
     &:hover {
         border-color: var(--buttonBorderActive);
     }
+}
+
+.buttonDisabled {
+    @include buttonShared;
+    background-color: var(--toolButtonColorDisabled);
 }
 
 .buttonActive {
